# figga

./: .gitignore  .travis.yml  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.semaphore/: semaphore.yml
figga/: __init__.py
src/: fig.py
tests/: config_example_1.ini  config_example_2.ini  test_configuration.py  test_configuration_from_environ.py  test_configuration_from_files.py
