[tool.poetry]
name = "figga"
version = "0.2.0"
description = "A simple configuration manager for Python."
authors = ["Berislav Lopac <berislav@lopac.net>"]
readme = 'README.md'
repository = "https://github.com/berislavlopac/figga"
homepage = "https://github.com/berislavlopac/figga"
keywords = ["configuration", "config"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^5"
pytest-cov = "^2.8.1"
pytest-flake8 = "^1.0.4"
pytest-mypy = "^0.6.1"

[tool.black]
line-length = 100
target-version = ['py38']
verbose = true
skip-string-normalization = false
