[tool.poetry]
name = "figga"
version = "0.3.0"
description = "A simple configuration manager for Python."
authors = ["Berislav Lopac <berislav@lopac.net>"]
readme = 'README.md'
repository = "https://github.com/berislavlopac/figga"
homepage = "https://github.com/berislavlopac/figga"
keywords = ["configuration", "config"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5"
pytest-cov = "^2.8.1"
pytest-flake8 = "^1.0.4"
pytest-mypy = "^0.6.1"
coverage = {extras = ["toml"], version = "^5.0.4"}
tox = "^3.23.0"

[tool.black]
line-length = 100
target-version = ["py37", "py38"]
verbose = true
skip-string-normalization = false

[tool.coverage.run]
source = [ "figga/" ]
omit = [ "*/tests/*" ]

[tool.coverage.report]
skip_covered = true
show_missing = true
fail_under = 90

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
